Bug fixes.
1.while adding an sfi, invalid action pop up trggered and blocking the action - fixed
2.Design issue while creating the SFI - done
3.SFI scroll issue inside slider - done
4.if click on added notes,screen diabled. only after refresh can makes edit - done
5.entity link not working - done
6.if click on added notes,screen diabled. only after refresh can makes edit - done.
7.icons placement issue- example delete icon alligned to edit label - spacing corrected.
8.extra space before entity name in coment slider - done.

--- a/Client/projects/coi/src/app/disclosure/entity-details/view-relationship-details/view-relationship-details.component.scss
+++ b/Client/projects/coi/src/app/disclosure/entity-details/view-relationship-details/view-relationship-details.component.scss
@@ -121,7 +121,7 @@ small {
 }
 
 .sticky-0 {
-    top: 0;
+    top: -16px;
     z-index: 11;
     position: sticky;
 }
@@ -339,7 +339,7 @@ small {
     font-weight: 500;
     border-radius: 0 50px 50px 0;
     padding: 10px 18px;
-    
+
     &::before {
         content: "";
         position: absolute;
