--- a/Client/projects/coi/src/app/shared-components/review-comments-slider/review-comments-slider.component.scss
+++ b/Client/projects/coi/src/app/shared-components/review-comments-slider/review-comments-slider.component.scss
@@ -387,7 +387,7 @@ select option {
 }
 
 .left-spacing {
-    padding-left: 7rem;
+    padding-left: 3rem;
     position: relative;
 
     &:before {
